<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/learning_fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="90dp">

            <ImageView
                android:id="@+id/flash_card_image"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginTop="16dp"
                android:importantForAccessibility="no"
                android:scaleType="centerCrop"
                android:src="@drawable/flash_card_illustration"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_choose_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/choose_a_mode"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/flash_card_image"
                app:layout_constraintStart_toStartOf="@+id/flash_card_image"
                app:layout_constraintTop_toBottomOf="@+id/flash_card_image" />

            <TextView
                android:id="@+id/text_choose_mode_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/select_one_of_the_modes_below_to_start"
                app:layout_constraintEnd_toEndOf="@+id/text_choose_mode"
                app:layout_constraintStart_toStartOf="@+id/text_choose_mode"
                app:layout_constraintTop_toBottomOf="@+id/text_choose_mode" />

            <Button
                android:id="@+id/button_word"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/word"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_choose_mode_desc" />

            <Button
                android:id="@+id/button_meaning"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="8dp"
                android:text="@string/meaning"
                app:layout_constraintEnd_toEndOf="@+id/button_word"
                app:layout_constraintStart_toStartOf="@+id/button_word"
                app:layout_constraintTop_toBottomOf="@+id/button_word" />

            <Button
                android:id="@+id/button_mix"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="8dp"
                android:text="@string/mix"
                app:layout_constraintEnd_toEndOf="@+id/button_meaning"
                app:layout_constraintStart_toStartOf="@+id/button_meaning"
                app:layout_constraintTop_toBottomOf="@+id/button_meaning" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>