<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/add_edit_word_fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorSurface"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="32dp">

            <EditText
                android:id="@+id/input_word"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:minHeight="48dp"
                android:hint="@string/words"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="?colorOnSurface"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/input_pos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@null"
                android:hint="@string/part_of_speech"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColor="?colorOnSurface"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@+id/input_word"
                app:layout_constraintStart_toStartOf="@+id/input_word"
                app:layout_constraintTop_toBottomOf="@+id/input_word" />

            <EditText
                android:id="@+id/input_ipa"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:minHeight="48dp"
                android:background="@null"
                android:hint="@string/ipa"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="?colorOnSurface"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@+id/input_pos"
                app:layout_constraintStart_toStartOf="@+id/input_pos"
                app:layout_constraintTop_toBottomOf="@+id/input_pos" />

            <EditText
                android:id="@+id/input_meaning"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:minHeight="48dp"
                android:background="@null"
                android:hint="@string/meaning"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="?colorOnSurface"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@+id/input_ipa"
                app:layout_constraintStart_toStartOf="@+id/input_ipa"
                app:layout_constraintTop_toBottomOf="@+id/input_ipa" />

            <CheckBox
                android:id="@+id/check_learning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="Mark as learning"
                app:layout_constraintStart_toStartOf="@+id/input_meaning"
                app:layout_constraintTop_toBottomOf="@+id/input_meaning" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>