<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <View
                android:id="@+id/view_avatar_outline"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_avatar_outline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <View
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@drawable/bg_avatar"
                app:layout_constraintBottom_toBottomOf="@id/view_avatar_outline"
                app:layout_constraintEnd_toEndOf="@id/view_avatar_outline"
                app:layout_constraintStart_toStartOf="@id/view_avatar_outline"
                app:layout_constraintTop_toTopOf="@id/view_avatar_outline" />

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="110dp"
                android:layout_height="110dp"
                app:layout_constraintBottom_toBottomOf="@+id/view_avatar_outline"
                app:layout_constraintEnd_toEndOf="@+id/view_avatar_outline"
                app:layout_constraintStart_toStartOf="@+id/view_avatar_outline"
                app:layout_constraintTop_toTopOf="@+id/view_avatar_outline"
                app:shapeAppearanceOverlay="@style/RoundedImageView"
                app:srcCompat="@drawable/profile" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/bg_edit_profile"
                android:paddingHorizontal="20dp"
                android:paddingVertical="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_avatar_outline">

                <TextView
                    android:id="@+id/text_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textColor="#8C8C8C"
                    android:textSize="17sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/input_username"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@null"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:paddingStart="16dp"
                    android:paddingEnd="0dp"
                    android:textAlignment="textEnd"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/text_username"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/text_username"
                    app:layout_constraintTop_toTopOf="@+id/text_username"
                    tools:ignore="LabelFor"
                    tools:text="John Wick" />

                <View
                    android:id="@+id/d1"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="24dp"
                    android:background="?colorOutlineVariant"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_username" />

                <TextView
                    android:id="@+id/text_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/email"
                    android:textColor="#8C8C8C"
                    android:textSize="17sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/d1" />

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@null"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:paddingStart="16dp"
                    android:paddingEnd="0dp"
                    android:textAlignment="textEnd"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/text_email"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/text_email"
                    app:layout_constraintTop_toTopOf="@+id/text_email"
                    tools:text="johnwick@gmail.com" />

                <View
                    android:id="@+id/d2"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="24dp"
                    android:background="?colorOutlineVariant"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_email" />

                <TextView
                    android:id="@+id/text_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/phone"
                    android:textColor="#8C8C8C"
                    android:textSize="17sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/d2" />

                <EditText
                    android:id="@+id/input_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@null"
                    android:importantForAutofill="no"
                    android:inputType="phone"
                    android:paddingStart="16dp"
                    android:paddingEnd="0dp"
                    android:textAlignment="textEnd"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/text_phone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/text_phone"
                    app:layout_constraintTop_toTopOf="@+id/text_phone"
                    tools:text="+84 44 888 777" />

                <View
                    android:id="@+id/d3"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="24dp"
                    android:background="?colorOutlineVariant"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_phone" />

                <TextView
                    android:id="@+id/text_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/gender"
                    android:textColor="#8C8C8C"
                    android:textSize="17sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/d3" />

                <EditText
                    android:id="@+id/input_gender"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:hint="@null"
                    android:importantForAutofill="no"
                    android:inputType="none"
                    android:paddingStart="16dp"
                    android:paddingEnd="0dp"
                    android:textAlignment="textEnd"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/text_gender"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/text_gender"
                    app:layout_constraintTop_toTopOf="@+id/text_gender"
                    tools:text="Male" />

                <View
                    android:id="@+id/d4"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="24dp"
                    android:background="?colorOutlineVariant"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_gender" />

                <TextView
                    android:id="@+id/text_dob"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/date_of_birth"
                    android:textColor="#8C8C8C"
                    android:textSize="17sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/d4" />

                <EditText
                    android:id="@+id/input_dob"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:hint="@null"
                    android:importantForAutofill="no"
                    android:inputType="date"
                    android:paddingStart="16dp"
                    android:paddingEnd="0dp"
                    android:textAlignment="textEnd"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/text_dob"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/text_dob"
                    app:layout_constraintTop_toTopOf="@+id/text_dob"
                    tools:text="30/12/2002" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>